<resources>
    <string name="app_name">Wisata Tarutung</string>
    <string name="kulinerbutton">KULINER</string>
    <string name="wisatabutton">WISATA</string>
    <string name="tentangbutton">TENTANG</string>
    <string name="hotelbutton">HOTEL</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo9">TODO</string>
    <string name="air_panas_hutabarat">Air Panas Hutabarat</string>
    <string name="sopo_partungkoan">Sopo Partungkoan</string>
    <string name="salib_kasih">Salib Kasih</string>
    <string name="air_soda_parbubu">Air Soda Parbubu</string>
    <string name="hotel_bali">Hotel Bali</string>
    <string name="hotel_hineni">Hotel Hineni</string>
    <string name="hotel_safari">Hotel Safari</string>
    <string name="kacang_sihobuk">Kacang Sihobuk</string>
    <string name="kue_ombus_ombus">Kue Ombus Ombus</string>
    <string name="backgroundmerah">TODO</string>
    <string name="deksripsi">DEKSRIPSI</string>
    <string name="lokasi">ALAMAT</string>
    <string name="kue_talam">Kue Talam</string>
    <string name="harga">HARGA</string>
    <string name="fasilitas">FASILITAS</string>
    <string name="alamat">ALAMAT</string>
    <string name="cendol">Cendol</string>
    <string name="hotel_carolina">Hotel Palapa</string>
    <string name="deskripsi_bali">Dirancang untuk wisata bisnis dan plesiran, Hotel dan Restaurant Bali terletak strategis di Tarutung, salah satu daerah lokal paling terkenal. Hanya 35km dari sini, hotel bintang 1 ini dapat secara mudah diakses dari bandara. Dengan lokasinya yang strategis, hotel ini menawarkan akses mudah ke destinasi yang wajib dikunjungi di kota ini. Dengan menawarkan pelayanan superior dan sejumlah fasilitas kepada para tamu hotel, Hotel dan Restaurant Bali berkomitmen untuk memastikan penginapan Anda senyaman mungkin. Fasilitas terbaik hotel ini termasuk Wi-fi di tempat umum, tempat parkir mobil, restoran, layanan binatu (laundry). Hotel ini memiliki 28 kamar yang didesain dengan indah. Banyak kamar memiliki televisi layar datar, meja tulis, TV satelit/kabel, shower, air minum dalam kemasan botol gratis. Disamping itu, hotel memiliki berbagai pilihan fasilitas rekreasi yang menjamin Anda melakukan bermacam hal selama menginap. Temukan paduan menarik dari pelayanan profesional dan sejumlah fasilitas di Hotel dan Restaurant Bali.\n</string>
    <string name="harga_bali">Untuk harga per kamarnya Rp.424.227\n</string>
    <string name="alamat_bali">Jl. Balige no. 1, Tarutung 22411, Indonesia\n</string>
    <string name="deksripsi_hineni">Hotel Hineni, yang terletak di kaki bukit Siatas Barita, Tapanuli Utara, membawa Anda lebih dekat kepada keindahan Maha Kuasa dengan menghadirkan kepada Anda, penginapan yang berkonsep minimalis. Kamar yang terdapat pada 3 lokasi terpisah dilengkapi dengan fasilitas masing-masing kelasnya, dilengkapi fasilitas mini-ballroom, resort pemandian air panas (hotspring) dan agrowisata jeruk tersedia untuk Anda dalam melengkapi wisata Anda.\n</string>
    <string name="harga1">HARGA</string>
    <string name="harga_hineni">Untuk harga per kamarnya dapat berubah-ubah\n</string>
    <string name="alamat_hineni">Jl. Raja Johannes no. 7A, Tarutung, Tarutung 22411, Indonesia\n</string>
    <string name="deskripsi_safari">Hotel Safari, yaitu hotel dengan konsep minimalis yang mengadirkan nuansa inda. Terdapat kamar dengan fasilitas yang berbeda dengan konsep futuristik\n</string>
    <string name="alamat_safari">Jl. Sisingamangaraja, Hutatoruan VI, Tarutung, Kabupaten Tapanuli Utara, Sumatera Utara 22411\n</string>
    <string name="alamat_palapa">Jalan Mayjen Di Panjaitan No.103, Hutatoruan V, Tarutung, Hutatoruan VI, Tarutung, Kabupaten Tapanuli Utara, Sumatera Utara 22412, Indonesia\n</string>
    <string name="deskripsi_palapa">Hotel Palapa, yaitu hotel dengan konsep minimalis dan sederhana dimana harga pada hotel ini sangat murah\n</string>
    <string name="hotel_carolina1">Hotel Carolina</string>
    <string name="todo123">TODO</string>
    <string name="namahotel">Hotel</string>
    <string name="hotel_palapa1">Hotel Palapa</string>
    <string name="bahan_bahan">BAHAN-BAHAN</string>
    <string name="cara_membuat">CARA MEMBUAT</string>
    <string name="deskripsi_hobuk">Sebuah makanan ringan yang banyak disajikan memang sudah hampir kita nikmati semuanya seperti kacang sihobuk misalnya yang merupakan kacang yang diolah dengan cara dimasak dalam kuali yang sudah berisi pasir panas dan kemudian kacang tersebut dimasukkan kedalamnya dan dimasak sampai mengering dan kulitnya menjadi renyah dan mudah dikupas. Kacang yang dibuat menjadi kacang sihobuk biasanya adalah kacang tanah yang sudah dibersihkan. kacang mungkin tidak asing karena jenis dan bentuknya sama seperti kacang kulit pada umumnya hanya saja mungkin yang membedakan kacang sihobuk dengan kacang yang lainnya adalah dimasak dengan pasir didalam kuali besar. Cemilan ringan khas Batak ini memang memiliki nama yang unik yaitu sihobuk dan sihobuk sendiri diambil dari desa Sihobuk yang terletak di daerah Tarutung Tapanuli Utara.\n</string>
    <string name="bahanhobuk">20 kg kacang tanah segar yang memiliki kualitas benar-benar sangat baik\nPasir hitam secukupnya yang halus\nAir yang bersih secukupnya untuk merendam kacang\n</string>
    <string name="carahobuk">Ambil kacang tanah yang masih lengkap dengan kulitnya.\nCuci kacang tanah sampai bersih dengan air sampai tanahnya hilang dan warna kacang menjadi lebih cerah.\nRendam kacang yang sudah dibersihkan dengan air biasa atau air hangat kira-kira selama 2-3 hari.\nAngkat dan buang airnya lalu ditiriskan hingga kering.\nPanaskan pasir didalam kuali diatas api besar lalu masukkan kacang kedalamnya.\nAdukdengan kayu atau alat pengaduk yang lainnya sampai matang merata dan kacang menjadi kering Lalu kacang didinginkan dulu sebelum disajikan dan dibersihkan dari pasir yang menempel Kacang sihobuk siap dinikmati.\n</string>
    <string name="deskripsitalam">Kue talam adalah salah satu kue tradisional yang cukup populer di indonesia. Biasanya kue talam ini sangat enak disajikan di kala waktu senggang atau sebagai menu pembuka ketika berbuka puasa. Rasanya yang enak dan teksturnya yang lembut merupakan salah satu hal yang membuat kue talam ini cukup digemari oleh berbagai kalangan dari mulai anak – anak hingga orang dewasa.\n</string>
    <string name="bahantalam">Bahan Lapisan Hijau :\n225 gram tepung beras\n75 gram tepung kanji\n2 tetes pewarna hijau tua\n1.050 ml santan dari\n1 setengah butir kelapa\n300 gram gula pasir\n1 lembar daun pandan\n100 ml air daun suji (yang diambil dari 80 lembar daun suji)\nsetengah sendok teh garam\n\nBahan Lapisan Cokelat :\n450 ml santan dari setengah butir kelapa\n75 gram tepung kanji\n225 gram gula merah, disisir 2 lembar daun pandan\n3/4 sendok teh garam\n75 ml air panas\n2 sendok teh tepung beras\n</string>
    <string name="caratalam">Langkah pertama, Membuat lapisan hijau: didihkan santan beserta gula, daun pandan, air daun suji, garam dan pewarna. Lalu aduk hingga merata.Kemudian, setelah terasa hangat, tuang ke campuran tepung beras dan tepung kanji perlahan sedikit-sedikit sambil anda diuleni hingga adonan terasa licin.\nLangkah kedua, tuang adonan pada cetakan kue mangkuk hingga 3/4 tinggi cetakan. Kemudian kukus selama kurang lebih 20 menit.\nSelanjutnya, Membuat Lapisan cokelat: rebus santan beserta gula merah, garam dan daun pandan hingga mendidih. Kemudian saring. Setelah itu aduk tepung beras dengan air panas. Lalu masukkan ke dalam campuran gula merah dan aduk hingga rata. Kemudian tuangkan ke atas tepung kanji. Lalu aduk rata lagi dan tuang ke atas lapisan hijau. Setelah itu kukus kurang lebih selama 15 menit.\nTerakhir, keluarkan kue talam dari cetakan, dinginkan sejenak, kemudian sajikan.\n</string>
    <string name="deskripsiombus">Kue Ombus Ombus adalah salah satu jajanan khas Batak dan berasal dari Siborongborong, Tapanuli Utara. Kue ombus-ombus ini memiliki bentuk yang cukup unik yaitu seperti kerucut yang dibungkus oleh daun pisang, sehingga terasa lebih alami, dan terbuat dari adonan tepung dengan parutan kelapa kemudian pada bagian tengahnya diberi bahan isi berupa gula merah dan dimasak dengan cara dikukus.\n</string>
    <string name="bahanombus">200 Gram Tepung Ketan\n200 Gram Kelapa Muda, kemudian diparut\n100 Gram Gula Merah, kemudian disisir\nGaram secukupnya\nDaun pandan, di iris kecil-kecil\nDaun pisang untuk membungkus\n</string>
    <string name="caraombus">Kukuslan tepung ketan, bersamaan dengan kelapa parut dan garam kemudian aduk hingga rata sampai adonan kelihatan berbutir\nLalu Siapkan pembungkusnya ombus-ombus yaitu daun pisang, kemudian letakan daun pandan, tuangkan adonan 1 sendok makan, isilah gula merah, kemudian tutup kembali dan bukuslah berbentuk kerucut.\nJika sudah semua, panaskan pengukus kemudian kukus semua adonan yang sudah dibungkus hingga matang.\nAngkat, Kue Ombus-Ombus yang Praktis dan Nikmat siap disajikan.\n</string>
    <string name="deskripsicendol">Minuman manis berisi bulatan lembut ini juga dikenal dengan nama dawet. Pada saat siang hari yang terik, es cendol gula merah ini memang begitu menyegarkan. Dalam resep ini sekaligus lengkap plus cara membuat butiran cendolnya yang menggunakan bahan tepung beras\n</string>
    <string name="bahancendol">Bahan :\n150 gram tepung berasn70 gram tepung sagu\n85 ml air daun suji\n3 sdm air kapur sirih\n500 ml air bersih\nAir es secukupnya es batu secukupnya\n\nBahan Pelengkap :\n220 gr gula merah, sisir\n150 ml air\n600 ml santan rebus\n8 mata nangka, iris kecil-kecil.\nBisa juga diganti dengan 1 cangkir cincau, sudah di potong dadu kecil-kecil\n</string>
    <string name="caracendol">Aduk tepung beras dan tepung sagu dengan setengah bagian air.\nRebus air sisanya dengan air kapur sirih, air daun suji, dan garam. Rebus sampai mendidih.\nKemudian tuangkan larutan tepung, aduk sampai mengental. Angkat.\nPersiapkan ayakan cendol, taruh diatas baskom yang sudah diisi dengan air es.\nTuangkan adonan panas kedalam cetakan, kemudian tekan-tekan sampai membentuk butiran-butiran memanjang. Tiriskan.\n</string>
    <string name="kulinerzzz">Kuliner</string>
    <string name="deskripsiairpanas">Pemandian alam air Panas Sipoholon adalah sebuah destinasi wisata pemandian yang seru, menyenangkan, dan mensehatkan. Destinasi wisata air panas yang terletak di Kabupeten Tapanuli Utara setiap harinya selalu ramai dikunjungi oleh wisatawan baik wisatawan lokal maupun mancanegara. Air panas Sipoholon Tapanuli Utara ini berasal dari pusat mata air perut bumi yang selalu mengalir setiap saat. Air Panas Sipoholon ini mengandung belerang dan kebaikan bagi setiap orang yang menikmatinya ialah dapat menyehatkan, melembutkan, dan mengencangkan kulit. Larutan kapur dan belerang yang terdapat di air panas Sipoholon ini kerap sekali dipergunakan oleh setiap pengungjung sebagai media mempercantik kulit yaitub dengan menempelkan tepung kapur pada wajah atau bagian kulit lainnya. Keindahan dan keeksotisan dari pemanpakan gunung kapur yang berpadu dengan adanya warna warni yang khas pada gunung mampu membuat Anda takjub dan pengen berphoto selvie dengan mengambil latar belakang gunung kapur tersebut.\n</string>
    <string name="deskripsisoda">Pemandian Air Soda Tarutung adalah salah satu tempat wisata pemandian di Kabupaten Tapanuli Utara, Provinsi Sumatera Utara. Mata Air Soda Tarutung terletak di kaki bukit daerah Tarutung, di Desa Parbubu I, Kabupaten Tapanuli Utara. Mata air soda ini hanya berjarak satu kilometer dari pusat kota Tarutung. Pemandain Air Soda hanya ada dua dunia ini, yakni di Tarutung dan di Venezuela.\n</string>
    <string name="alamatsoda">Parbubu I, Tarutung, Kabupaten Tapanuli Utara, Sumatera Utara 22411\n</string>
</resources>