<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WisataSodaParbubu">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff7979"
        android:contentDescription="@string/backgroundmerah" />


    <com.synnapps.carouselview.CarouselView
        android:id="@+id/ImageSlider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="5dp"
        app:slideInterval="3000">
    </com.synnapps.carouselview.CarouselView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ImageSlider"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                card_view:cardBackgroundColor="#ffffffff"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/deksripsi"
                    android:textAlignment="center"
                    android:textColor="#FF000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                card_view:cardBackgroundColor="#ffffffff"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/deskripsisoda"
                    android:textColor="#FF000000"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                card_view:cardBackgroundColor="#ffffffff"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/lokasi"
                    android:textAlignment="center"
                    android:textColor="#FF000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                card_view:cardBackgroundColor="#ffffffff"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/alamatsoda"
                    android:textColor="#FF000000"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>